# antenati

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  ISTRUZIONI PER PRINCIPIANTI.md  LICENSE  PRINCIPIANTI.md  README.md  antenati.py  antenati_downloader.py  antenati_errors.py  antenati_gui.py  antenati_http.py  antenati_iiif.py  pyproject.toml  requirements-dev.txt  requirements.txt  selenium_utils.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  live.yml  pyinstaller.yml  pythonapp.yml  release.yml
src/antenati/: __init__.py  __main__.py  cli.py  downloader.py  errors.py  gui.py  http.py  iiif.py
src/antenati/gui/: __init__.py  __main__.py  app.py  progress.py  worker.py
tests/: conftest.py  test_check_dir.py  test_download_run.py  test_gui_worker.py  test_http.py  test_iiif_defensive.py  test_iiif_parsing.py  test_metadata.py  test_smoke.py  test_url_manipulation.py
tests/fixtures/: gallery.html  manifest_minimal.json
tests/integration/: test_live_download.py
