# NOTE: This is a tooling-only pyproject.toml. The [project] table will be
# added in a later step together with the move to a src/ layout and the
# switch to hatchling + hatch-vcs for dynamic versioning. For now, the
# package is still distributed as standalone scripts and PyInstaller
# binaries, so we only configure dev tools here.

[tool.ruff]
line-length = 160
target-version = "py310"
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
# Conservative starting set: enabled rules already pass on the current
# codebase. Stricter rules (PTH, ANN, D, etc.) will be turned on as the
# refactor lands and the affected code is rewritten.
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "RET", "TID"]

[tool.ruff.lint.per-file-ignores]
# antenati_gui.py is the only file still untouched by the refactor; its
# imports will be sorted when the GUI worker extraction lands.
"antenati_gui.py" = ["I001"]

[tool.ruff.format]
quote-style = "single"
# antenati_gui.py is reformatted in the GUI worker extraction PR.
exclude = ["antenati_gui.py"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true

# antenati_gui.py keeps a relaxed override until the worker refactor.
[[tool.mypy.overrides]]
module = ["antenati_gui"]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that hit the live Portale Antenati (opt-in, slow, may flake)",
]
